fix(datetime): add dark mode variables

--- a/tegel/src/components/datetime/datetime-theme-vars.scss
+++ b/tegel/src/components/datetime/datetime-theme-vars.scss
@@ -2,6 +2,7 @@
 .sdds-theme-light {
   --sdds-datetime-color: var(--sdds-grey-868);
   --sdds-datetime-bg: var(--sdds-white);
+  --sdds-datetime-icon: var(--sdds-grey-868);
   --sdds-datetime-border-bottom: var(--sdds-grey-400);
   --sdds-datetime-placeholder: var(--sdds-grey-500);
   --sdds-datetime-border-bottom-hover: var(--sdds-grey-600);
@@ -27,10 +28,10 @@
   --sdds-datetime-border-bottom-success: var(--sdds-grey-800);
 
   // error
-  --sdds-datetime-border-bottom-error: var(--sdds-red-500);
-  --sdds-datetime-helper-error: var(--sdds-red-500);
-  --sdds-datetime-bar-error: var(--sdds-red-500);
-  --sdds-datetime-icon-error: var(--sdds-red-500);
+  --sdds-datetime-border-bottom-error: var(--sdds-negative);
+  --sdds-datetime-helper-error: var(--sdds-negative);
+  --sdds-datetime-bar-error: var(--sdds-negative);
+  --sdds-datetime-icon-error: var(--sdds-negative);
 
   // Textcounter
   --sdds-datetime-textcounter: var(--sdds-grey-700);
@@ -41,20 +42,21 @@
 }
 
 .sdds-theme-dark {
-  --sdds-datetime-color: var(--sdds-white);
-  --sdds-datetime-bg: var(--sdds-black);
-  --sdds-datetime-border-bottom: var(--sdds-grey-400);
+  --sdds-datetime-color: var(--sdds-grey-600);
+  --sdds-datetime-bg: var(--sdds-grey-900);
+  --sdds-datetime-icon: var(--sdds-grey-50);
+  --sdds-datetime-border-bottom: var(--sdds-grey-600);
   --sdds-datetime-placeholder: var(--sdds-grey-500);
   --sdds-datetime-border-bottom-hover: var(--sdds-grey-600);
 
   // Disabled
-  --sdds-datetime-disabled-bg: var(--sdds-black);
-  --sdds-datetime-disabled-color: var(--sdds-grey-400);
-  --sdds-datetime-disabled-placeholder: var(--sdds-grey-400);
-  --sdds-datetime-disabled-label: var(--sdds-grey-400);
+  --sdds-datetime-disabled-bg: var(--sdds-grey-900);
+  --sdds-datetime-disabled-color: var(--sdds-grey-700);
+  --sdds-datetime-disabled-placeholder: var(--sdds-grey-700);
+  --sdds-datetime-disabled-label: var(--sdds-grey-700);
 
   // Label
-  --sdds-datetime-label-color: var(--sdds-white);
+  --sdds-datetime-label-color: var(--sdds-grey-100);
   --sdds-datetime-label-inside-color: var(--sdds-grey-700);
   --sdds-datetime-placeholder-focus-color: var(--sdds-grey-500);
 
@@ -62,16 +64,17 @@
   --sdds-datetime-bar: var(--sdds-blue-400);
 
   // helper
-  --sdds-datetime-helper: var(--sdds-grey-700);
+  --sdds-datetime-helper: var(--sdds-grey-500);
 
   // success
-  --sdds-datetime-border-bottom-success: var(--sdds-grey-800);
+  --sdds-datetime-border-bottom-success: var(--sdds-grey-50);
+  --sdds-datetime-color-success: var(--sdds-grey-50);
 
   // error
-  --sdds-datetime-border-bottom-error: var(--sdds-red-500);
-  --sdds-datetime-helper-error: var(--sdds-red-500);
-  --sdds-datetime-bar-error: var(--sdds-red-500);
-  --sdds-datetime-icon-error: var(--sdds-red-500);
+  --sdds-datetime-border-bottom-error: var(--sdds-negative);
+  --sdds-datetime-helper-error: var(--sdds-negative);
+  --sdds-datetime-bar-error: var(--sdds-negative);
+  --sdds-datetime-icon-error: var(--sdds-negative);
 
   // Textcounter
   --sdds-datetime-textcounter: var(--sdds-grey-700);
